--- a/src/TodoCounter/TodoCounter.css
+++ b/src/TodoCounter/TodoCounter.css
@@ -2,8 +2,10 @@
   font-size: 24px;
   text-align: center;
   margin: 0;
-  padding: 48px;
+  padding: 12px 48px  24px 48px;
   font-weight: normal;
+  color: #383838;
+  font-family: 'Montserrat';
 }
 
 .TodoCounter span {
