--- a/src/TodoSearch/TodoSearch.css
+++ b/src/TodoSearch/TodoSearch.css
@@ -1,9 +1,14 @@
+.CenterBlock {
+  text-align: center;
+}
+
 .TodoSearch {
-  border-radius: 2px;
-  border: 2px solid #202329;
+  border-radius: 40px;
+  background-color: rgb(247 235 227);
+  border: none;
   margin: 0 24px;
-  height: 64px;
-  width: calc(100% - 62px);
+  height: 40px;
+  width: calc(100% - 40%);
   font-size: 24px;
   text-align: center;
   font-family: 'Montserrat';
@@ -19,5 +24,5 @@
 }
 
 .TodoSearch:focus {
-  outline-color: #61DAFA;
+  outline-color: rgb(255, 145, 77);
 }
