--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ body {
   position: relative;
   min-height: 100vh;
 }
+
+body {
+  background-image: linear-gradient(45deg,rgb(255, 145, 77),rgb(255 221 199) 46%,rgb(247 235 227));
+}
